--- a/src/partials/articles-body.html
+++ b/src/partials/articles-body.html
@@ -1,95 +1,97 @@
-<div class="articles wrapper">
-    Статьи
-</div>
-
-<div class="all-articles">
-    <div class="articles-all wrapper">
-        <div class="articles-row">
-            <div class="articles-header">Безопасность Вашего бизнеса в ваших руках</div>
-        </div>
-        <div class="articles-row">
-            <div class="articles-col">
-                <div class="articles-pic"><img src="images/articles-pic.png" alt="user"></div>
-                <div class="articles-data">22.12.16</div>
-                <div class="articles-time">16:50</div>
-            </div>
-            <div class="articles-col articles-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas... </div>
-        </div>
-        <a href="#"><div class="articles-row articles-pod-text">
-            Подробнее
-        </div></a>
+<div class="mbox">
+    <div class="articles wrapper">
+        Статьи
     </div>
 
-    <div class="articles-all wrapper">
-        <div class="articles-row">
-            <div class="articles-header">Безопасность Вашего бизнеса в ваших руках</div>
-        </div>
-        <div class="articles-row">
-            <div class="articles-col">
-                <div class="articles-pic"><img src="images/articles-pic.png" alt="user"></div>
-                <div class="articles-data">22.12.16</div>
-                <div class="articles-time">16:50</div>
+    <div class="all-articles">
+        <div class="articles-all wrapper">
+            <div class="articles-row">
+                <div class="articles-header"><a href="article.html">Безопасность Вашего бизнеса в ваших руках</a></div>
             </div>
-            <div class="articles-col articles-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas... </div>
+            <div class="articles-row">
+                <div class="articles-col">
+                    <div class="articles-pic"><img src="images/articles-pic.png" alt="user"></div>
+                    <div class="articles-data">22.12.16</div>
+                    <div class="articles-time">16:50</div>
+                </div>
+                <div class="articles-col articles-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas... </div>
+            </div>
+            <a href="article.html"><div class="articles-row articles-pod-text">
+                Подробнее
+            </div></a>
         </div>
-        <a href="#"><div class="articles-row articles-pod-text">
-            Подробнее
-        </div></a>
-    </div>
 
-    <div class="articles-all wrapper">
-        <div class="articles-row">
-            <div class="articles-header">Безопасность Вашего бизнеса в ваших руках</div>
-        </div>
-        <div class="articles-row">
-            <div class="articles-col">
-                <div class="articles-pic"><img src="images/articles-pic.png" alt="user"></div>
-                <div class="articles-data">22.12.16</div>
-                <div class="articles-time">16:50</div>
+        <div class="articles-all wrapper">
+            <div class="articles-row">
+                <div class="articles-header"><a href="article.html">Безопасность Вашего бизнеса в ваших руках</a></div>
             </div>
-            <div class="articles-col articles-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas... </div>
+            <div class="articles-row">
+                <div class="articles-col">
+                    <div class="articles-pic"><img src="images/articles-pic.png" alt="user"></div>
+                    <div class="articles-data">22.12.16</div>
+                    <div class="articles-time">16:50</div>
+                </div>
+                <div class="articles-col articles-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas... </div>
+            </div>
+            <a href="article.html"><div class="articles-row articles-pod-text">
+                Подробнее
+            </div></a>
         </div>
-        <a href="#"><div class="articles-row articles-pod-text">
-            Подробнее
-        </div></a>
-    </div>
 
-    <div class="articles-all wrapper">
-        <div class="articles-row">
-            <div class="articles-header">Безопасность Вашего бизнеса в ваших руках</div>
-        </div>
-        <div class="articles-row">
-            <div class="articles-col">
-                <div class="articles-pic"><img src="images/articles-pic.png" alt="user"></div>
-                <div class="articles-data">22.12.16</div>
-                <div class="articles-time">16:50</div>
+        <div class="articles-all wrapper">
+            <div class="articles-row">
+                <div class="articles-header"><a href="article.html">Безопасность Вашего бизнеса в ваших руках</a></div>
             </div>
-            <div class="articles-col articles-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas... </div>
+            <div class="articles-row">
+                <div class="articles-col">
+                    <div class="articles-pic"><img src="images/articles-pic.png" alt="user"></div>
+                    <div class="articles-data">22.12.16</div>
+                    <div class="articles-time">16:50</div>
+                </div>
+                <div class="articles-col articles-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas... </div>
+            </div>
+            <a href="article.html"><div class="articles-row articles-pod-text">
+                Подробнее
+            </div></a>
         </div>
-        <a href="#"><div class="articles-row articles-pod-text">
-            Подробнее
-        </div></a>
-    </div>
 
-    <div class="articles-all wrapper">
-        <div class="articles-row">
-            <div class="articles-header">Безопасность Вашего бизнеса в ваших руках</div>
-        </div>
-        <div class="articles-row">
-            <div class="articles-col">
-                <div class="articles-pic"><img src="images/articles-pic.png" alt="user"></div>
-                <div class="articles-data">22.12.16</div>
-                <div class="articles-time">16:50</div>
+        <div class="articles-all wrapper">
+            <div class="articles-row">
+                <div class="articles-header"><a href="article.html">Безопасность Вашего бизнеса в ваших руках</a></div>
             </div>
-            <div class="articles-col articles-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas... </div>
+            <div class="articles-row">
+                <div class="articles-col">
+                    <div class="articles-pic"><img src="images/articles-pic.png" alt="user"></div>
+                    <div class="articles-data">22.12.16</div>
+                    <div class="articles-time">16:50</div>
+                </div>
+                <div class="articles-col articles-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas... </div>
+            </div>
+            <a href="article.html"><div class="articles-row articles-pod-text">
+                Подробнее
+            </div></a>
         </div>
-        <a href="#"><div class="articles-row articles-pod-text">
-            Подробнее
-        </div></a>
+
+        <div class="articles-all wrapper">
+            <div class="articles-row">
+                <div class="articles-header"><a href="article.html">Безопасность Вашего бизнеса в ваших руках</a></div>
+            </div>
+            <div class="articles-row">
+                <div class="articles-col">
+                    <div class="articles-pic"><img src="images/articles-pic.png" alt="user"></div>
+                    <div class="articles-data">22.12.16</div>
+                    <div class="articles-time">16:50</div>
+                </div>
+                <div class="articles-col articles-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas... </div>
+            </div>
+            <a href="article.html"><div class="articles-row articles-pod-text">
+                Подробнее
+            </div></a>
+        </div>
     </div>
-</div>
-<div class="articles-form">
-    <form action="">
-        <input type="submit" name="show_more_articles" id="show_more_articles" value="ПОКАЗАТЬ ЕЩЕ">
-    </form>
+    <div class="articles-form">
+        <form action="">
+            <input type="submit" name="show_more_articles" id="show_more_articles" value="ПОКАЗАТЬ ЕЩЕ">
+        </form>
+    </div>
 </div>
