--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -5,24 +5,24 @@
         <div class="wrapper bot">
                 <div class="bot-row">
                     <div class="bot-col-1 bot-item">
-                        <div class="logo-bot"><img src="images/logo-bot.png" alt="logo"></div>
+                        <a href="index.html"><div class="logo-bot"><img src="images/logo-bot.png" alt="logo"></div></a>
                     </div>
                     <div class="bot-col-2 bot-item">
                         <div class="dostavo4ka" style="float: left">
-                            <a href="#" class="dostavka">Главная</a>
-                            <a href="#" class="dostavka">О компании</a>
-                            <a href="#" class="dostavka">Услуги</a>
+                            <a href="index.html" class="dostavka">Главная</a>
+                            <a href="about.html" class="dostavka">О компании</a>
+                            <a href="yslygi.html" class="dostavka">Услуги</a>
                         </div>
                         <div class="dostavo4ka">
-                            <a href="#" class="dostavka">Отзывы</a>
-                            <a href="#" class="dostavka">Статьи</a>
-                            <a href="#" class="dostavka">Контакты</a>
+                            <a href="otziv.html" class="dostavka">Отзывы</a>
+                            <a href="articles.html" class="dostavka">Статьи</a>
+                            <a href="map.html" class="dostavka">Контакты</a>
                         </div>
                     </div>
                     <div class="bot-col-3 bot-item">
                         <div class="phone-mail">
-                            <div class="phone-bot"><img src="images/phone.png" alt="phone">+7 (812) 924-85-95</div>
-                            <div class="mail-bot"><img src="images/mail.png" alt="mail">info@avis.group</div>
+                            <a href="tel:78129248595" class="phone-bot"><img src="images/phone.png" alt="phone">+7 (812) 924-85-95</a>
+                            <a href="mailto:info@avis.group" class="mail-bot"><img src="images/mail.png" alt="mail">info@avis.group</a>
                         </div>
                         <div class="adres-bot"><img src="images/arrow.png" alt="place">192102, г. Санкт-Петербург, ул. Фучика, д.8, оф.315</div>
                     </div>
