--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -6,22 +6,22 @@
                 <div class="adres"><img src="images/arrow.png" alt="place">192102, г. Санкт-Петербург, ул. Фучика, д.8, оф.315</div>
             </div>
             <div class="mail_phone col_1_2 top-item">
-                <div class="mail"><img src="images/mail.png" alt="mail">info@avis.group</div>
-                <div class="phone"><img src="images/phone.png" alt="phone">+7 (812) 924-85-95</div>
+                <a href="mailto:info@avis.group" class="mail"><img src="images/mail.png" alt="mail">info@avis.group</a>
+                <a href="tel:78129248595" class="phone"><img src="images/phone.png" alt="phone">+7 (812) 924-85-95</a>
             </div>
         </div>
 
     </div>
 
     <div class="menu wrapper">
-        <div class="logo col_1_3 menu-item"><a href=""><img src="images/logo.png" alt="logo"></a></div>
+        <div class="logo col_1_3 menu-item"><a href="index.html"><img src="images/logo.png" alt="logo"></a></div>
         <div class="menu-text col_2_3 menu-item">
-            <div><a href="" class="menu-a">Главная</a></div>
-            <div><a href="" class="menu-a">О компании</a></div>
-            <div><a href="" class="menu-a">Услуги</a></div>
-            <div><a href="" class="menu-a">Отзывы</a></div>
-            <div><a href="" class="menu-a">Статьи</a></div>
-            <div><a href="" class="menu-a">Контакты</a></div>
+            <div><a href="index.html" class="menu-a">Главная</a></div>
+            <div><a href="about.html" class="menu-a">О компании</a></div>
+            <div><a href="yslygi.html" class="menu-a">Услуги</a></div>
+            <div><a href="otziv.html" class="menu-a">Отзывы</a></div>
+            <div><a href="articles.html" class="menu-a">Статьи</a></div>
+            <div><a href="map.html" class="menu-a">Контакты</a></div>
         </div>
     </div>
 
