--- a/src/partials/map.html
+++ b/src/partials/map.html
@@ -1,5 +1,13 @@
 <section class="map" id="map">
     <div class="mbox">
+        <div class="title">
+            <h3>Контакты</h3>
+        </div>
+        <div class="rower">
+            <div class="item tel"><img src="images/map-ic-01.png" alt=""><span>+7 (812) 924-85-95</span></div>
+            <div class="item"><img src="images/map-ic-02.png" alt=""><span>192102, г. Санкт-Петербург, ул. Фучика, д.8, оф.315</span></div>
+            <div class="item ggg"><img src="images/map-ic-03.png" alt=""><span>info@avis.group</span></div>
+        </div>
         <div class="map-wrapper">
             <div id="google-map"></div>
         </div>
