--- a/src/sass/zdev_2.scss
+++ b/src/sass/zdev_2.scss
@@ -8,18 +8,16 @@
 .col_1_12{width: 8.33%; min-height: 1px;}
 
 .wrapper{
-  max-width: 1170px;
-  margin: 0 auto;
+  width: 100%;
   position: relative;
 }
 
 .navigation {
   display: flex;
   line-height: 20px;
-  font-family: 'DINProRegular';
   font-size: 15px;
-  margin: 20px 0 25px 0;
-  padding: 0 15px 0 15px;
+  margin: 20px 0 25px;
+
   a {
     text-decoration: none;
     color: #000000;
@@ -49,18 +47,16 @@
 }
 
 .art-h {
-  font-family: 'DINProMedium';
-  font-size: 24px;
+  font-weight: 500;  font-size: 24px;
   color: #9d0817;
-  padding: 0 13px 0 13px;
+
   margin: -7px 0 0 0;
 }
 
 .date-wrap {
   color: #919191;
-  font-family: 'DINProRegular';
   font-size: 14px;
-  padding: 33px 14px 0 14px;
+  padding: 33px 0 0;
 }
 
 .date-time {
@@ -75,12 +71,11 @@ display: flex;
   margin: 0 31px 10px 0px;
 }
 .pic-text {
-  padding: 10px 15px 0 15px;
+  padding: 10px 0 0;
 }
 
 .article-text {
   font-size: 16px;
-  font-family: 'DINProRegular';
   color: #000000;
   line-height: 30px;
   margin: -11px 0 0 0;
@@ -88,7 +83,6 @@ display: flex;
 
 .article-pod-text {
   font-size: 16px;
-  font-family: 'DINProRegular';
   color: #000000;
   line-height: 30px;
   margin: 22px 0 0 0;
@@ -96,8 +90,7 @@ display: flex;
 
 .spisok-text {
   width: 244px;
-  font-family: 'DINProMedium';
-  font-size: 15.99px;
+  font-weight: 500;  font-size: 15.99px;
   color: #9d0817;
   float: right;
   background-image: url("../images/article-arrow-red.jpg");
@@ -107,8 +100,7 @@ display: flex;
 }
 .spisok-text:hover {
   width: 244px;
-  font-family: 'DINProMedium';
-  font-size: 15.99px;
+  font-weight: 500;  font-size: 15.99px;
   color: #770e19;
   float: right;
   background-image: url("../images/podrobno-arrow-a.png");
@@ -117,14 +109,12 @@ display: flex;
   background-position-y: 6px;
 }
 
-
-.spisok {
-  padding: 22px 16px 164px 0;
+.spisok>ul>li:first-child {
+  margin: 0 0 0 0;
 }
 
 .about-us {
-  font-family: 'DINProMedium';
-  font-size: 24px;
+  font-weight: 500;  font-size: 24px;
   text-align: center;
   padding: 14px 5px 37px 0;
 }
@@ -136,7 +126,6 @@ display: flex;
 
 .about-text {
   font-size: 16px;
-  font-family: 'DINProRegular';
   color: #000000;
   line-height: 30px;
   margin: -10px 0 0 0;
@@ -145,7 +134,6 @@ display: flex;
 .about-pod-text {
   height: 335px;
   font-size: 16px;
-  font-family: 'DINProRegular';
   color: #000000;
   line-height: 30px;
   margin: 9px 0 0 0;
@@ -153,8 +141,7 @@ display: flex;
 
 .zagolovok {
   padding: 14px 5px 4px 0;
-  font-family: 'DINProMedium';
-  font-size: 24px;
+  font-weight: 500;  font-size: 24px;
   color: #000000;
   text-align: center;
 }
@@ -172,32 +159,28 @@ display: flex;
 .otziv-all {
   border-top: 2px solid #e8e8e8;
   margin: 5px auto;
-  padding: 52px 15px 35px 15px;
+  padding: 52px 0 35px;
 }
 
 .otziv-data {
-  font-family: 'DINProMedium';
-  font-size: 18px;
+  font-weight: 500;  font-size: 18px;
   color: #9d0817;
   margin: -18px 0px 18px 0px;
 }
 
 .otziv-name {
-  font-family: 'DINProMedium';
-  font-size: 18px;
+  font-weight: 500;  font-size: 18px;
   color: #9d0817;
   margin: 5px 0 5px 0px;
 }
 
 .otziv-town {
-  font-family: 'DINProMedium';
-  font-size: 14px;
+  font-weight: 500;  font-size: 14px;
   color: #404041;
   margin: 0 0 0 0px;
 }
 .otziv-text {
   font-size: 16px;
-  font-family: 'DINProRegular';
   color: #000000;
   line-height: 30px;
   padding: 8px 0 0 4px;
@@ -209,28 +192,33 @@ display: flex;
 }
 .otziv-form {
   text-align: center;
+  padding-bottom: 53px;
 }
 
 .articles {
   text-align: center;
   font-size: 24px;
   color: #000000;
-  font-family:'DINProMedium';
-  padding: 14px 20px 10px 15px;
+  font-weight: 500;  padding: 14px 20px 10px 15px;
 }
 
 .articles-all {
-  padding: 33px 15px 64px 15px;
+  padding: 33px 0 64px;
   border-bottom: 2px solid #e8e8e8;
 }
 
 
 
 .articles-header {
-  font-family: 'DINProMedium';
-  font-size: 18px;
-  color: #9d0817;
+  font-weight: 500;  font-size: 18px;
   padding: 0 0 28px 0;
+  a {
+    color: #9d0817;
+  }
+  a:hover {
+    text-decoration: none;
+    color: #770e19;
+  }
 }
 
 .articles-pic {
@@ -242,7 +230,6 @@ display: flex;
 .articles-data {
   color: #919191;
   font-size: 14px;
-  font-family: 'DINProRegular';
   float: left;
   margin: 0px 8px 0 -1px;
 }
@@ -250,7 +237,6 @@ display: flex;
 .articles-time {
   color: #919191;
   font-size: 14px;
-  font-family: 'DINProRegular';
   margin: 0px 0px 0 0px;
 }
 
@@ -260,7 +246,6 @@ display: flex;
 
 .articles-text {
   font-size: 16px;
-  font-family: 'DINProRegular';
   color: #000000;
   line-height: 30px;
   padding: 0px 0 0 0px;
@@ -269,8 +254,7 @@ display: flex;
 }
 
 .articles-pod-text {
- font-family: 'DINProMedium';
-  font-size: 15.99px;
+  font-weight: 500;  font-size: 15.99px;
   color: #9d0817;
   float: right;
   background-image: url("../images/article-arrow-red.jpg");
@@ -281,8 +265,7 @@ display: flex;
   margin: 11px 0 0 0;
 }
 .articles-pod-text:hover {
-  font-family: 'DINProMedium';
-  font-size: 15.99px;
+  font-weight: 500;  font-size: 15.99px;
   color: #770e19;
   float: right;
   background-image: url("../images/podrobno-arrow-a.png");
@@ -299,24 +282,23 @@ display: flex;
 
 .yslygi-head {
   text-align: center;
-  font-family: 'DINProMedium';
-  color: #000000;
+  font-weight: 500;  color: #000000;
   font-size: 24px;
-  padding: 0 5px 41px 0;
-  margin: -7px auto;
+  padding: 13px 0 42px;
+  h3{    margin: 0;}
 }
 .manager {
   text-align: center;
 }
 .rows {
-  margin: 28px auto;
+  margin: 28px auto 8px;
   display: flex;
   justify-content: space-around;
+  flex-wrap: wrap;
 }
 
 .cols {
-  font-family: 'DINProMedium';
-  font-size: 18px;
+  font-weight: 500;  font-size: 18px;
   color: #000000;
   width: 555px;
   height: 120px;
@@ -327,6 +309,7 @@ display: flex;
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 20px;
 }
 
 .cols:hover {
@@ -339,9 +322,8 @@ display: flex;
 }
 
 .yslygi-zagolovok {
-  padding: 0 0 0 14px;
-  font-family: "DINProBold";
-  font-size: 18px;
+
+  font-weight: 700;  font-size: 18px;
   color: #9d0817;
   text-align: left;
   text-transform: uppercase;
@@ -350,7 +332,6 @@ display: flex;
   width: 555px;
   text-align: left;
   padding: 20px 0px 10px 0px;
-  font-family: 'DINProRegular';
   color: #000000;
   font-size: 16px;
   line-height: 30px;
