--- a/src/partials/article-body.html
+++ b/src/partials/article-body.html
@@ -1,34 +1,35 @@
-
-<div class="article-head wrapper">
-    <div class="art-h">
-        <h3>Безопасность Вашего бизнеса в ваших руках</h3>
-    </div>
-</div>
-
-<div class="date-wrap wrapper">
-    <div class="date-time">
-        <div class="date">22.12.16</div>
-        <div class="time">16:50</div>
-    </div>
-</div>
-
-<div class="article-wrapper wrapper">
-    <div class="pic-text">
-        <div class="article-picture"><img src="images/hands.jpg" alt="people"></div>
-        <div class="article-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            <br>
-            Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas.
-        </div>
-        <div class="article-pod-text">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+<div class="mbox">
+    <div class="article-head wrapper">
+        <div class="art-h">
+            <h3>Безопасность Вашего бизнеса в ваших руках</h3>
         </div>
     </div>
-</div>
 
-<div class="wrapper">
-    <div class="spisok">
-        <a href=""><div class="spisok-text">Вернуться к списку всех статей</div></a>
+    <div class="date-wrap wrapper">
+        <div class="date-time">
+            <div class="date">22.12.16</div>
+            <div class="time">16:50</div>
+        </div>
+    </div>
+
+    <div class="article-wrapper wrapper">
+        <div class="pic-text">
+            <div class="article-picture"><img src="images/hands.jpg" alt="people"></div>
+            <div class="article-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                <br>
+                Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas.
+            </div>
+            <div class="article-pod-text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </div>
+        </div>
+    </div>
+
+    <div class="wrapper">
+        <div class="spisok">
+            <a href="" class="cfix"><div class="spisok-text">Вернуться к списку всех статей</div></a>
 
 
+        </div>
     </div>
 </div>
