--- a/src/partials/hidden-block.html
+++ b/src/partials/hidden-block.html
@@ -10,32 +10,39 @@
     </div>
 
     <div id="call-popup">
-        <form action="ajax.php" name="" class="contact-form">
-            <div class="contact-form-title">
-                <h5>Lorem ipsum dolor.</h5>
+        <form action="ajax-programer.php" name="" id="form-pop" class="contact-form form-zakaz">
+            <div class="ostalis">Заказать обратный звонок</div>
+            <div class="zapolnite">Заполните поля ниже и мы свяжемся с Вами
+                <span>в ближайшее время</span>
             </div>
-            <div class="contact-form-row cfix">
-                <div class="contact-form-item">
-                    <div class="contact-form-item-input form_row">
-                        <div class="form_input">
-                            <input type="text" name="contact_name" required="required" value="" placeholder="Ваше Имя">
-                        </div>
-                    </div>
-                </div>
-                <div class="contact-form-item">
-                    <div class="contact-form-item-input form_row">
-                        <div class="form_input">
-                            <input type="text" name="contact_tel" value="" required="required" placeholder="Ваш номер" class="tel-mask">
-                        </div>
-                    </div>
-                </div>
+
+            <div class="form-row ic-name">
+                <input type="text" name="contact_name" required="required" placeholder="Имя">
             </div>
-            <div class="contact-form-row cfix">
-                <div class="contact-form-item">
-                    <button type="submit" class="contact-submit">
-                        <span>Отправить заявку</span>
-                    </button>
-                </div>
+            <div class="form-row ic-phone">
+                <input type="text"  class="tel-mask" name="contact_tel" required="required" placeholder="Телефон">
+            </div>
+            <div class="form-row">
+                <button class="send">оправить заявку</button>
+            </div>
+        </form>
+    </div>
+    <div id="call-popup2">
+        <form action="ajax.php" name="" id="form-pop2" class="contact-form form-zakaz">
+            <div class="ostalis">добавить отзыв</div>
+            <div class="zapolnite">Заполните поля ниже чтобы для добавления отзыва </div>
+
+            <div class="form-row ic-name">
+                <input type="text"  name="contact_name" required="required" placeholder="Имя">
+            </div>
+            <div class="form-row ic-city">
+                <input type="text" name="contact_city" required="required" placeholder="Город">
+            </div>
+            <div class="form-row ic-none">
+                <textarea type="text"  name="contact_text" required="required" placeholder="Ваш комментарий..."></textarea>
+            </div>
+            <div class="form-row">
+                <button class="send">оправить заявку</button>
             </div>
         </form>
     </div>
