--- a/src/partials/kroshki.html
+++ b/src/partials/kroshki.html
@@ -1,9 +1,9 @@
-<div class="nav wrapper">
+<div class="nav mbox">
     <div class="navigation">
-        <div class="home"><a href=""><img src="images/house.png" alt="house"></a></div>
+        <div class="home"><a href="index.html"><img src="images/house.png" alt="house"></a></div>
         <div class="arrow"><img src="images/article-arrow.png" alt="arrow"></div>
-        <div class="article"><a href="">Статьи</a></div>
+        <div class="article"><a href="articles.html">Статьи</a></div>
         <div class="arrow"><img src="images/article-arrow.png" alt="arrow"></div>
-        <div class="bezopasnost"><a href="">Безопасность Вашего бизнеса в ваших руках</a></div>
+        <div class="bezopasnost">Безопасность Вашего бизнеса в ваших руках</div>
     </div>
 </div>
