--- a/src/partials/otziv-body.html
+++ b/src/partials/otziv-body.html
@@ -1,9 +1,10 @@
-<div class="wrapper">
-    <div class="zagolovok">
-        Отзывы
+<div class="mbox">
+    <div class="wrapper">
+        <div class="zagolovok">
+            Отзывы
+        </div>
     </div>
-</div>
-<div class="vse-otzuvu">
+    <div class="vse-otzuvu">
         <div class="otziv-all wrapper">
             <div class="otziv-row">
                 <div class="otziv-col">
@@ -68,11 +69,13 @@
                 <div class="otziv-col otziv-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur.. aut odit aut fugit, sed quia consequuntur magni dolores eos qui</div>
             </div>
         </div>
-</div>
+    </div>
 
-<div class="otziv-form wrapper">
-    <form action="">
-        <input type="submit" name="show_more" id="show_more" value="ПОКАЗАТЬ ЕЩЕ">
-        <input type="submit" name="add_otz" id="add_otz" value="ДОБАВИТЬ ОТЗЫВ">
-    </form>
+    <div class="otziv-form wrapper">
+        <div class="row">
+            <a href="#" class="add_otz" >ПОКАЗАТЬ ЕЩЕ</a>
+            <a href="#call-popup2" class="fancy-shnjaga add_otz" >ДОБАВИТЬ ОТЗЫВ</a>
+        </div>
+
+    </div>
 </div>
