--- a/src/sass/zdev_4.scss
+++ b/src/sass/zdev_4.scss
@@ -1,16 +1,26 @@
-section.map{
+section.map{  font-weight: 500;  font-size: 18px; color: #000;  padding-bottom: 150px;
   .mbox{max-width: 1184px;padding: 0 20px;}
   .map-wrapper{}
   #google-map{height: 573px; width: 100%;}
+  .rower{    display: flex;    justify-content: space-between;    align-items: center;    padding-bottom: 31px;}
+  .item{    display: flex;    justify-content: flex-start;    align-items: center;
+    &.tel{      font-size: 24px;}
+    &.ggg{      width: 260px;}
+    img{      margin-right: 20px;}
+  }
 }
 section.slider{
   .mbox{max-width: 1184px;padding: 0 20px;}
-  .slider-wraper{ padding-bottom: 50px;}
+  .slider-wraper{ padding-bottom: 43px;}
   .slick-initialized .slick-slide{ display: flex;}
+  .slick-dots{    bottom: -17px;}
   .slick-dots li button{width: 7px; height: 7px; }
   .slick-dots li button:before{ background-color: #939598; width: 7px; height: 7px; border-radius: 50%;content:''; opacity: 1;}
   .slick-dots li button:hover:before{ background-color: #f47920;}
   .slick-dots li.slick-active button:before{ background-color: #f47920;}
   .slick-dots li{ width: 7px; height: 7px;}
 
+}
+.title{  width: 100%;  text-align: center;  padding: 14px 0 33px;
+  h3{    margin: 0;    font-size: 24px;    font-weight: 500;    color: #000;}
 }
